crates/ty/tests/cli/snapshots/cli__output_format_concise.snap
---
source: crates/ty/tests/cli/main.rs
info:
  program: ty
  args:
    - check
    - "--output-format"
    - concise
    - "--target-version"
    - "3.9"
---
success: false
exit_code: 1
----- stdout -----
test.py:3:13: info[revealed-type] Revealed type: `LiteralString`
test.py:4:1: error[invalid-syntax] Cannot use `match` statement on Python 3.9 (syntax was added in Python 3.10)
Found 2 diagnostics

----- stderr -----
