crates/ty/tests/cli/snapshots/cli__output_format_gitlab.snap
---
source: crates/ty/tests/cli/main.rs
info:
  program: ty
  args:
    - check
    - "--output-format"
    - gitlab
    - "--target-version"
    - "3.9"
---
success: false
exit_code: 1
----- stdout -----
[
  {
    "check_name": "revealed-type",
    "description": "revealed-type: Revealed type: `LiteralString`",
    "severity": "info",
    "fingerprint": "979dad1e810c03b2",
    "location": {
      "path": "test.py",
      "positions": {
        "begin": {
          "line": 3,
          "column": 13
        },
        "end": {
          "line": 3,
          "column": 26
        }
      }
    }
  },
  {
    "check_name": "invalid-syntax",
    "description": "invalid-syntax: Cannot use `match` statement on Python 3.9 (syntax was added in Python 3.10)",
    "severity": "major",
    "fingerprint": "143e238d7b44acdb",
    "location": {
      "path": "test.py",
      "positions": {
        "begin": {
          "line": 4,
          "column": 1
        },
        "end": {
          "line": 4,
          "column": 6
        }
      }
    }
  }
]
----- stderr -----
